# pico-lvgl

./: .gitignore  CMakeLists.txt  lv_conf.h  pico_lib_drivers_import.cmake
examples/hello/: CMakeLists.txt  hello.cpp
scripts/: deploy.sh
